Published source code

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Mūsų e-parduotuvėje rasite dekoracijų, dovanų ir dalykų, palengvinančių kasdienį gyvenimą. Didžioji mūsų produktų dalis yra 3D spausdinti, lazerio pjauti, prekiaujant pas mus tikrai nenusivilsite!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -32,8 +32,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&family=Open+Sans:wght@300;400;500;600;700;800&family=Poppins:wght@100;200;300;400;500;600;700&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+
     <title>Armilla</title>
     
+    <script src="https://kit.fontawesome.com/ec1c341bef.js" crossorigin="anonymous"></script>
+    <!--<script src="https://firebasestorage.googleapis.com/v0/b/project-7820168409702389920.appspot.com/o/users%2FopWOUPZWjpQm36IyRg3yaFVbT3o1%2Ffiles%2F1671028455872waves.js?alt=media&token=20cea6ed-5323-46b5-99ed-9f4b8f0ca8d0"></script>-->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -48,6 +51,8 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script src="https://kit.fontawesome.com/ec1c341bef.js" crossorigin="anonymous"></script>
+
+
+    
   </body>
 </html>
